--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,6 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +15,7 @@
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
